applications/software/cluster/stirlingpdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirlingpdf
  labels:
    app: stirlingpdf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirlingpdf
  template:
    metadata:
      labels:
        app: stirlingpdf
    spec:
      containers:
      - name: stirlingpdf
        image: ghcr.io/stirling-tools/stirling-pdf:2.12.0-ultra-lite@sha256:42b058517d68df2c186ee7cbb33a044ec885b7913f5eabd72dd69154d3c8d1d1
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 0m
            memory: 0Mi
          limits:
            cpu: 1000m
            memory: 1000Mi
