applications/software/cluster/stirlingpdf/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirlingpdf
spec:
  parentRefs:
    - name: main
      namespace: envoy-system
      sectionName: https
  hostnames:
    - "pdf.hackcorp.net"
    - "pdf.yewolf.fr"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: keda-add-ons-http-interceptor-proxy
          namespace: keda
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
